--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,29 @@
-body {
-  background: black;
-  color: white;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  background-color: #38254a;
+}
+
+.image-container {
+  background-image: url('/images/Nox Sleep.PNG');
+  width: 50%;
+  height: 100%; /* Adjust the height of the image */
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: contain;
+}
+
+.text-container {
+  margin-top: 20px; /* Adds space between the image and text */
+  padding: 10px;
+  text-align: center;
+  color: #f3e4fb; /* Text color */
+}
+
+.text-container p {
+  font-size: 20px; /* Adjust text size */
+  color: #f3e4fb; /* Text color */
 }
